[build-system]
requires = [
    "python_version>='3.11'",
    "setuptools>=70",
    "setuptools_scm>=8",
]
build-backend = 'setuptools.build_meta'


##

[project]
name = 'omdevthing'


##

[tool.omlish.pyproject.srcs]
main = ['omdevthing']

[tool.omlish.pyproject.venvs]
all = { interp = '@3.11.8', requires = 'requirements-dev.txt', srcs = ['@main'] }
default = {}
